// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Loading Button renders Large Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  min-width: 120px;
  min-height: 64px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: 120px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #D5E0FC;
  border-radius: 8px;
  color: #3358CC;
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-1 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<button
    aria-busy="true"
    aria-live="polite"
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-1"
      fill="currentColor"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="50%"
        cy="50%"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders Small Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  min-width: 64px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #D5E0FC;
  border-radius: 8px;
  color: #3358CC;
  cursor: progress;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #3358CC;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  width: 16px;
  height: 16px;
  stroke: #3358CC;
}

.emotion-1 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<button
    aria-busy="true"
    aria-live="polite"
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="emotion-1"
      fill="currentColor"
      viewBox="0 0 64 64"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="50%"
        cy="50%"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders a button with fixed for minWidth and minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 100px;
  min-height: 100px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 100px;
  min-width: 100px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders a button with fixed for width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  width: 100px;
  min-width: 80px;
  height: 100px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders a button with percentage for minWidth and minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 100%;
  min-height: 100%;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 100%;
  min-width: 100%;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders a button with percentage for width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  width: 100%;
  min-width: 80px;
  height: 100%;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders a button with token set for minWidth and minHeight 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 160px;
  min-height: 160px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 160px;
  min-width: 160px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button Loading Button renders a button with token set for width and height 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  width: 160px;
  min-width: 80px;
  height: 160px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: auto;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders Large Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  min-width: 120px;
  min-height: 64px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: 120px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders Small Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 12px;
  min-width: 64px;
  min-height: 32px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  min-width: 64px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 16px;
  height: 16px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders button link when href passed 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<a
    class="emotion-0"
    data-testid="buttonLink"
    href="http://localhost:6006"
  >
    <span
      class="emotion-1"
    >
      test button click
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button renders button link with disabled link 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: not-allowed;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #E2E2E2;
  border-radius: 8px;
  color: #ABABAB;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #ABABAB;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<a
    aria-disabled="true"
    class="emotion-0"
    data-testid="buttonLink"
    role="link"
  >
    <span
      class="emotion-1"
    >
      test button click
    </span>
  </a>
</DocumentFragment>
`;

exports[`Button renders fixed-width Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  width: 160px;
  min-width: 120px;
  min-height: 64px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders full-width Button 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  width: 100%;
  min-width: 120px;
  min-height: 64px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 64px;
  min-width: auto;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders text and icon button with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(2, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

.emotion-2 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-2 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-2 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
    <svg
      aria-hidden="true"
      class="emotion-2 emotion-3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`Button renders with different spaceInset preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders with different style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: transparent;
  border-style: solid;
  border-color: #3358CC;
  border-width: 1px;
  border-radius: 8px;
  color: #3358CC;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  background-color: #ECF1FF;
  border-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #D5E0FC;
  border-color: #14328D;
}

.emotion-0:disabled {
  border-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders with different typography preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders with fallback formatting 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button renders with logical props overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  display: inline-grid;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  grid-template-columns: repeat(1, auto);
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  justify-items: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  min-width: 80px;
  min-height: 48px;
  margin-block: 30px;
  padding-block: 30px;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 8px;
  color: #FFFFFF;
  cursor: pointer;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #254CAC;
}

.emotion-0:active:not(:disabled) {
  background-color: #14328D;
}

.emotion-0:disabled {
  background-color: #E2E2E2;
  color: #ABABAB;
}

.emotion-0:disabled svg {
  fill: #ABABAB;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,background-color;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-1 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
}

.emotion-1::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-1::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<button
    class="emotion-0"
    data-testid="button"
    type="button"
  >
    <span
      class="emotion-1"
    >
      click this!
    </span>
  </button>
</DocumentFragment>
`;
